package com.y4vra.irboardbackend.application.dtos;

import java.io.Serializable;
import java.util.List;

public record NonFunctionalRequirementDTO(
        Long id,
        String entityIdentifier,
        String name,
        String description,
        Long orderValue,
        String state,
        String measurementUnit,
        String operator,
        Double thresholdValue,
        Double targetValue,
        Double actualValue,
        Long projectId,
        Long parentId,
        List<NonFunctionalRequirementDTO> children,
        List<StakeholderDTO> observedStakeholders,
        List<NonFunctionalRequirementDTO> observedNFRequirements,
        List<DocumentDTO> observedDocuments,
        List<FunctionalRequirementDTO> observerFRequirements
) implements Serializable {}