package com.y4vra.irboardbackend.entities.enums;

public enum ComparisonOperator {
    EQUAL_TO,
    LESS_THAN,
    GREATER_THAN,
}
